--- a/html_folder/header.html
+++ b/html_folder/header.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css_folder/normalize.css">
 </head>
 <body>
-    <header id="header">
-    </header>
-    <footer id="footer">
-
-    </footer>
+    
+    <nav id="nav">
+        <a href="/html_folder/index.html">Home</a>
+    </nav>
     <script src="/js_folder/script.js"></script>
 </body>
 </html>
