--- a/html_folder/header.html
+++ b/html_folder/header.html
@@ -1,3 +1,4 @@
+<!-- Source HTML -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,10 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
     <nav id="nav">
         <a href="/html_folder/index.html">Home</a>
     </nav>
-    <script src="/js_folder/script.js"></script>
+    
 </body>
 </html>
