--- a/html_folder/index.html
+++ b/html_folder/index.html
@@ -1,3 +1,4 @@
+<!-- Target HTML -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,10 +8,9 @@
     <link rel="stylesheet" href="/css_folder/normalize.css">
 </head>
 <body>
-    <header id="header">
+    <header w3-include-html="header.html"> 
     </header>
-    <footer id="footer">
-
+    <footer w3-include-html="footer.html">
     </footer>
     <script src="/js_folder/script.js"></script>
 </body>
