--- a/html_folder/index.html
+++ b/html_folder/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css_folder/normalize.css">
+    <link rel="stylesheet" href="../css_folder/normalize.css">
 </head>
 <body>
     <header w3-include-html="header.html"> 
