--- a/html_folder/index.html
+++ b/html_folder/index.html
@@ -12,6 +12,6 @@
     </header>
     <footer w3-include-html="footer.html">
     </footer>
-    <script src="/js_folder/script.js"></script>
+    <script src="../js_folder/script.js"></script>
 </body>
 </html>
