--- a/html_folder/footer.html
+++ b/html_folder/footer.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/css_folder/normalize.css">
 </head>
-<body>
+<body> <!--Colour code for background is f8f9fa-->
     <footer>
         <div>Banana</div>
     </footer>
