--- a/html_folder/index.html
+++ b/html_folder/index.html
@@ -7,15 +7,42 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css_folder/normalize.css">
+    <link rel="stylesheet" href="../css_folder/home.css">
 </head>
 <body>
     <!--Header-->
     <header w3-include-html="header.html" class="bg-light"> 
     </header>
     <!--Promotions/events-->
-    <div class="container">
-        <div></div>
+    <div class="container-fluid">
+        <img src="https://picsum.photos/200/300" alt="random image">        
     </div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="https://picsum.photos/200/300" alt="First Promotion">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://picsum.photos/200/300" alt="Second Promotion">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://picsum.photos/200/300" alt="Third Promotion">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     <!--Laptop Best seller-->
     <!--Keyboard Best seller-->
     <!--Mouse Best seller-->
