completed form/account creation template

--- a/html_folder/header.html
+++ b/html_folder/header.html
@@ -13,9 +13,9 @@
     <div id="topheader" class="container-fluid">
         <br>
         <div class="d-flex">
-            <img src="/Images/Logo.png" alt="Logo" id="logo" class="sidepng"> 
+            <a href="/html_folder/index.html"><img src="/Images/Logo.png" alt="Logo" id="logo"> </a>
             <div id="imgbutton" class="d-flex">
-                <img src="/Images/Account.png" alt="Login" class="sidepng">
+                <a href="/html_folder/login.html"><img src="/Images/Account.png" alt="Login" class="sidepng"></a>
                 <img src="/Images/Cart.png" alt="Cart" class="sidepng">
             </div>
         </div>
@@ -26,7 +26,7 @@
         <a class="navbar-item" href="/html_folder/index.html">Home</a>
         <a class="navbar-item" href="/html_folder/index.html">Catalogue</a>
         <a class="navbar-item" href="/html_folder/index.html">Play to win</a>
-        <a class="navbar-item" href="/html_folder/index.html">Account</a>   
+        <a class="navbar-item" href="/html_folder/signUp.html">Account</a>   
         <!-- This is the dropdown menu
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
