--- a/html_folder/signUp.html
+++ b/html_folder/signUp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Sign up</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/css_folder/normalize.css">
     <link rel="stylesheet" href="/css_folder/account.css">
@@ -12,7 +12,7 @@
     <header w3-include-html="header.html" class="bg-light"> 
     </header>
     <br>
-    <div class="container bg-light w-25">
+    <div class="container bg-light">
         <form>
             <div class="form-group">
                 <label for="name">Name:</label>
@@ -21,9 +21,22 @@
             <div class="form-group">
                 <label for="exampleInputPassword1">Password:</label>
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              </div>
+            <div class="form-group">
+                <label for="contact">Contact No.:</label>
+                <input type="number" class="form-control" id="contact" placeholder="Mobile number">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email:</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+                <label for="address">Address:</label>
+                <input type="text" id="address" class="form-control" placeholder="Enter residential/shipping address">
             </div>
 
-            <a href="/html_folder/signUp.html" id="question" class="btn">Havent created a account?</a>
+            <a href="/html_folder/login.html" id="question" class="btn">Have an account already?</a>
             <button type="submit" class="btn btn-success">Submit</button>
           </form>
     </div>
