Completed displaying info on individual-item.html. Still need to complete button function AddToCart() and css.

--- a/html_folder/header.html
+++ b/html_folder/header.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav id="nav">
-        <a href="/html_folder/index.html">Home</a>
+        <a href="index.html">Home</a>
     </nav>
     
 </body>
