--- a/header.html
+++ b/header.html
@@ -9,16 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/css_folder/header.css">
 </head>
-<body>
-    <nav id="nav">
-        <a href="index.html">Home</a>
 <body> <!--Colour code for background is f8f9fa-->
     <div id="topheader" class="container-fluid">
         <br>
         <div class="d-flex">
-            <a href="/html_folder/index.html"><img src="/Images/Logo.png" alt="Logo" id="logo"> </a>
+            <a href="/index.html"><img src="/Images/Logo.png" alt="Logo" id="logo"> </a>
             <div id="imgbutton" class="d-flex">
-                <a href="/html_folder/login.html"><img src="/Images/Account.png" alt="Login" class="sidepng"></a>
+                <a href="login.html"><img src="/Images/Account.png" alt="Login" class="sidepng"></a>
                 <img src="/Images/Cart.png" alt="Cart" class="sidepng">
             </div>
         </div>
@@ -26,10 +23,10 @@
     </div>
     <!--NAVBAR-->
     <nav class="navbar navbar-light bg-light">
-        <a class="navbar-item" href="/html_folder/index.html">Home</a>
-        <a class="navbar-item" href="/html_folder/index.html">Catalogue</a>
-        <a class="navbar-item" href="/html_folder/index.html">Play to win</a>
-        <a class="navbar-item" href="/html_folder/signUp.html">Account</a>   
+        <a class="navbar-item" href="index.html">Home</a>
+        <a class="navbar-item" href="item-catalogue.html">Catalogue</a>
+        <a class="navbar-item" href="index.html">Play to win</a>
+        <a class="navbar-item" href="signUp.html">Account</a>   
         <!-- This is the dropdown menu
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
