--- a/item-catalogue.html
+++ b/item-catalogue.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css_folder/item-catalouge.css">
+    <link rel="stylesheet" href="../css_folder/item-catalouge.css">
     
 </head>
 <body>
@@ -46,7 +46,7 @@
     
     <footer w3-include-html="footer.html">
     </footer>
-    <script src="/js_folder/script.js"></script>
-    <script src = "/js_folder/item-catalogue.js"></script>
+    <script src="../js_folder/script.js"></script>
+    <script src = "../js_folder/item-catalogue.js"></script>
 </body>
 </html>
