Put HTML Files on top level for GitHub Pages Test 2

--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
     <div id="topheader" class="container-fluid">
         <br>
         <div class="d-flex">
-            <a href="/index.html"><img src="/Images/Logo.png" alt="Logo" id="logo"> </a>
+            <a href="index.html"><img src="/Images/Logo.png" alt="Logo" id="logo"> </a>
             <div id="imgbutton" class="d-flex">
                 <a href="login.html"><img src="/Images/Account.png" alt="Login" class="sidepng"></a>
                 <img src="/Images/Cart.png" alt="Cart" class="sidepng">
