--- a/individual-item.html
+++ b/individual-item.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css_folder/individual-item.css">
+    <link rel="stylesheet" href="css_folder/individual-item.css">
     <title>Document</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
 
     <footer w3-include-html="footer.html">
     </footer>
-    <script src="/js_folder/script.js"></script>
-    <script src="/js_folder/individual-item.js"></script>
+    <script src="js_folder/script.js"></script>
+    <script src="js_folder/individual-item.js"></script>
 </body>
 </html>
