--- a/signUp.html
+++ b/signUp.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css_folder/normalize.css">
-    <link rel="stylesheet" href="/css_folder/account.css">
+    <link rel="stylesheet" href="css_folder/normalize.css">
+    <link rel="stylesheet" href="css_folder/account.css">
 </head>
 <body>
     <header w3-include-html="header.html" class="bg-light"> 
@@ -36,7 +36,7 @@
                 <input type="text" id="address" class="form-control" placeholder="Enter residential/shipping address">
             </div>
 
-            <a href="/html_folder/login.html" id="question" class="btn">Have an account already?</a>
+            <a href="login.html" id="question" class="btn">Have an account already?</a>
             <button type="submit" class="btn btn-success">Submit</button>
           </form>
     </div>
@@ -44,6 +44,6 @@
     <footer w3-include-html="footer.html" class="bg-light">
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="/js_folder/script.js"></script>
+    <script src="js_folder/script.js"></script>
 </body>
 </html>
