--- a/header.html
+++ b/header.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css_folder/normalize.css">
+    <link rel="stylesheet" href="css_folder/normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css_folder/header.css">
+    <link rel="stylesheet" href="css_folder/header.css">
 </head>
 <body> <!--Colour code for background is f8f9fa-->
     <div id="topheader" class="container-fluid">
         <br>
         <div class="d-flex">
-            <a href="index.html"><img src="/Images/Logo.png" alt="Logo" id="logo"> </a>
+            <a href="index.html"><img src="Images/Logo.png" alt="Logo" id="logo"> </a>
             <div id="imgbutton" class="d-flex">
-                <a href="login.html"><img src="/Images/Account.png" alt="Login" class="sidepng"></a>
-                <img src="/Images/Cart.png" alt="Cart" class="sidepng">
+                <a href="login.html"><img src="Images/Account.png" alt="Login" class="sidepng"></a>
+                <img src="Images/Cart.png" alt="Cart" class="sidepng">
             </div>
         </div>
         <br>
