--- a/item-catalogue.html
+++ b/item-catalogue.html
@@ -46,7 +46,7 @@
     
     <footer w3-include-html="footer.html">
     </footer>
-    <script src="/js_folder/script.js"></script>
-    <script src = "/js_folder/item-catalogue.js"></script>
+    <script src="js_folder/script.js"></script>
+    <script src = "js_folder/item-catalogue.js"></script>
 </body>
 </html>
