--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
 
-            <a href="/html_folder/signUp.html" id="question" class="btn">Havent created a account?</a>
+            <a href="signUp.html" id="question" class="btn">Havent created a account?</a>
             <button type="submit" class="btn btn-success">Submit</button>
           </form>
     </div>
