--- a/signUp.html
+++ b/signUp.html
@@ -13,7 +13,7 @@
     </header>
     <br>
     <div class="container bg-light">
-        <form>
+        <form id = "account-info-form">
             <div class="form-group">
                 <label for="name">Name:</label>
                 <input id="name" class="form-control" type="text" placeholder="Enter your name">
@@ -37,13 +37,14 @@
             </div>
 
             <a href="login.html" id="question" class="btn">Have an account already?</a>
-            <button type="submit" class="btn btn-success">Submit</button>
-          </form>
+            <button type="submit" class="btn btn-success" onclick="PostInfoToDB(event)">Submit</button>
+        </form>
     </div>
     <br>
     <footer w3-include-html="footer.html" class="bg-light">
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="js_folder/script.js"></script>
+    <script src="js_folder/signUp.js"></script>
 </body>
 </html>
