--- a/login.html
+++ b/login.html
@@ -13,10 +13,10 @@
     </header>
     <br>
     <div class="container bg-light w-25">
-        <form>
+        <form id = "login-form">
             <div class="form-group">
-                <label for="name">Name:</label>
-                <input id="name" class="form-control" type="text" placeholder="Enter your name">
+                <label for="email">Email:</label>
+                <input id="email" class="form-control" type="text" placeholder="Enter your email">
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password:</label>
@@ -24,7 +24,7 @@
             </div>
 
             <a href="signUp.html" id="question" class="btn">Havent created a account?</a>
-            <button type="submit" class="btn btn-success">Submit</button>
+            <button class="btn btn-success" onclick="loginCheck(event)">Submit</button>
           </form>
     </div>
     <br>
@@ -32,5 +32,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="js_folder/script.js"></script>
+    <script src = "js_folder/login.js"></script>
 </body>
 </html>
