Created cart page and items in cart page

--- a/header.html
+++ b/header.html
@@ -16,7 +16,7 @@
             <a href="index.html"><img src="Images/Logo.png" alt="Logo" id="logo"> </a>
             <div id="imgbutton" class="d-flex">
                 <a href="login.html"><img src="Images/Account.png" alt="Login" class="sidepng"></a>
-                <img src="Images/Cart.png" alt="Cart" class="sidepng">
+                <a href = "cart.html"><img src="Images/Cart.png" alt="Cart" class="sidepng"></a>
             </div>
         </div>
         <br>
