--- a/cart.html
+++ b/cart.html
@@ -17,11 +17,12 @@
     <table class="table">
         <thead>
           <tr>
-            <th scope="col">#</th>
+            <th scope="col">Item</th>
             <th scope="col">Name</th>
             <th scope="col">Color</th>
             <th scope="col">Price</th>
             <th scope="col">Quantity</th>
+            <th scope="col">*</th>
           </tr>
         </thead>
         <tbody id = "item-cart-display">
