--- a/individual-item.html
+++ b/individual-item.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css_folder/individual-item.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
@@ -21,6 +22,12 @@
             <h1 id = "item-name"></h1>
             <h2 id = "item-price"></h2>
             <div id = "item-colors"></div>
+            <div id="quantity-block"  class="btn-group" hidden>
+                <button type="button" id="minus" class="button1">-</button>
+                <div id="count">0</div>
+                <button type="button" id="add" class="button1">+</button>
+            </div>
+            <br>
             <button id = "add-to-cart" type="button" onclick="AddToCart(event)" hidden>Add to Cart</button>
         </div>
 
@@ -32,7 +39,7 @@
     </footer>
     <script src="js_folder/script.js"></script>
     <script src="js_folder/individual-item.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
-
 </body>
 </html>
