added validation to forms in signup and login page

--- a/login.html
+++ b/login.html
@@ -16,11 +16,11 @@
         <form id = "login-form">
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input id="email" class="form-control" type="text" placeholder="Enter your email">
+                <input id="email" class="form-control" type="email" placeholder="Enter your email" required>
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">Password:</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <label for="password">Password:</label>
+                <input type="password" class="form-control" id="password" placeholder="Password" required>
             </div>
 
             <a href="signUp.html" id="question" class="btn">Havent created a account?</a>
