--- a/signUp.html
+++ b/signUp.html
@@ -16,24 +16,24 @@
         <form id = "account-info-form">
             <div class="form-group">
                 <label for="name">Name:</label>
-                <input id="name" class="form-control" type="text" placeholder="Enter your name">
+                <input id="name" class="form-control" type="text" placeholder="Enter your name" required>
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">Password:</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <label for="password">Password:</label>
+                <input type="password" class="form-control" id="password" placeholder="Password" required>
               </div>
             <div class="form-group">
                 <label for="contact">Contact No.:</label>
-                <input type="number" class="form-control" id="contact" placeholder="Mobile number">
+                <input type="number" class="form-control" id="contact" placeholder="Mobile number" required>
             </div>
             <div class="form-group">
               <label for="exampleInputEmail1">Email:</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required>
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
                 <label for="address">Address:</label>
-                <input type="text" id="address" class="form-control" placeholder="Enter residential/shipping address">
+                <input type="text" id="address" class="form-control" placeholder="Enter residential/shipping address" required>
             </div>
 
             <a href="login.html" id="question" class="btn">Have an account already?</a>
