--- a/footer.html
+++ b/footer.html
@@ -8,9 +8,27 @@
     <link rel="stylesheet" href="css_folder/normalize.css">
 </head>
 <body> <!--Colour code for background is f8f9fa-->
-    <footer>
-        <div>Footer</div>
-    </footer>
+    <div class="container-fluid bg-light">
+        <br>
+        <div class="row">
+            <div class="col-sm text-center">
+                <h2>Contact Us</h2>
+                <div class="text-start w-25" style="margin: auto;">
+                    <p>Contact No: 12345678</p>
+                    <p>Email: TechStudio@gmail.com</p>
+                    <p>Office Address: Johor Bahru Blk 23 Street 323</p>
+                </div>
+                
+            </div>
+            <div class="col-sm text-center">
+                <h2>Follow Us On</h2>
+                <a href=""><img src="Images/facebook.png" alt="Facebook"></a>
+                <a href=""><img src="Images/Instagram.png" alt="Instagram"></a>
+                <a href=""><img src="Images/X.png" alt="X/Twitter"></a>
+            </div>
+        </div>
+
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
