--- a/signUp.html
+++ b/signUp.html
@@ -27,8 +27,8 @@
                 <input type="number" class="form-control" id="contact" placeholder="Mobile number" required>
             </div>
             <div class="form-group">
-              <label for="exampleInputEmail1">Email:</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required>
+              <label for="email">Email:</label>
+              <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" required>
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
