added 2 buttons, bring user back to catalog page and bring user to checkout in cart page

--- a/cart.html
+++ b/cart.html
@@ -27,7 +27,18 @@
         </thead>
         <tbody id = "item-cart-display">
         </tbody>
-      </table>
+    </table>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col">
+          <a href="item-catalogue.html"><button type="button" class="btn btn-light">Continue Shopping</button></a>
+        </div>
+        <div class="col text-end">
+          <a href=""><button type="button" class="btn btn-success" id="checkout">Proceed to Checkout</button></a>
+        </div>
+      </div>
+    </div>
+    <br>
     
     <!--Footer-->
     <footer w3-include-html="footer.html" class="bg-light">
