Added images for home/index page

--- a/index.html
+++ b/index.html
@@ -42,82 +42,93 @@
         <h2>Best Seller for <br> Laptop
         </h2>
         <div class="row">
-            <div class="col-sm">
-                <img src="https://picsum.photos/200" alt="Product 1">
-                <p>Lenovo IdeaPad 3</p>
-                <p>$489</p>
+            <div class="col-sm border border-dark">
+                <br>
+                <img src="pictures/item-pics/ALIENWARE-M18-GAMING-LAPTOP.jpg" alt="Product 1">
+                <p>ALIENWARE M18 GAMING LAPTOP</p>
+                <p>$1750</p>
             </div>
-            <div class="col-sm">
-                <img src="https://picsum.photos/200" alt="Product 1">
+            <div class="col-sm border border-dark">
+                <br>
+                <img src="pictures/item-pics/ASUS-Vivobook-Pro-15X-OLED.jpg" alt="Product 2">
                 <p>ASUS Vivobook Pro 15X <br> OLED</p>
                 <p>$2,851</p>
             </div>
-            <div class="col-sm">
-                <img src="https://picsum.photos/200" alt="Product 1">
-                <p>MSI GF 63 Thin</p>
+            <div class="col-sm border border-dark">
+                <br>
+                <img src="pictures/item-pics/MSI-GF63-Thin.jpg" alt="Product 3">
+                <p>MSI GF63 Thin</p>
                 <p>$1,566</p>
             </div>
-            <div class="col-sm">
-                <img src="https://picsum.photos/200" alt="Product 1">
+            <div class="col-sm border border-dark">
+                <img src="pictures/item-pics/ACER-Swift-Go-14.jpg" alt="Product 4">
                 <p>ACER Swift Go 14</p>
                 <p>$998</p>
             </div>
         </div>
     </div>
+    <br>
     <!--Keyboard Best seller-->
     <div class="container">
         <h2>Best Seller for <br> Keyboard
         </h2>
         <div class="row">
-            <div class="col-sm">
-                <img src="https://picsum.photos/200" alt="Product 1">
+            <div class="col-sm border border-dark">
+                <br>
+                <br>
+                <img src="pictures/item-pics/Logitech-Pop-Keys.jpg" class="w-100" alt="Product 1">
+                <br><br><br>
                 <p>Logitech Pop Keys</p>
                 <p>$100</p>
             </div>
-            <div class="col-sm">
-                <img src="https://picsum.photos/200" alt="Product 1">
+            <div class="col-sm border border-dark">
+                <img src="pictures/item-pics/Razer-BlackWidow-V4-Pro.jpg" alt="Product 2">
                 <p>Razer BlackWidow V4 Pro</p>
                 <p>$284</p>
             </div>
-            <div class="col-sm">
-                <img src="https://picsum.photos/200" alt="Product 1">
+            <div class="col-sm border border-dark">
+                <img src="pictures/item-pics/Logitech-Pro-X.jpg" alt="Product 3">
                 <p>Logitech Pro X</p>
                 <p>$150</p>
             </div>
-            <div class="col-sm">
-                <img src="https://picsum.photos/200" alt="Product 1">
-                <p>NZXT Function</p>
+            <div class="col-sm border border-dark">
+                <img src="pictures/item-pics/NZXT-Function-TKL.jpg" alt="Product 4">
+                <p>NZXT Function TKL</p>
                 <p>$130</p>
             </div>
         </div>
     </div>
+    <br>
     <!--Mouse Best seller-->
     <div class="container">
         <h2>Best Seller for <br> Mouse
         </h2>
         <div class="row">
-            <div class="col-sm">
-                <img src="https://picsum.photos/200" alt="Product 1">
+            <div class="col-sm border border-dark">
+                <img src="pictures/item-pics/Razer-Viper-V2-Pro.jpg" class="w-50" alt="Product 1">
                 <p>Razer Viper V2 Pro</p>
                 <p>$130</p>
             </div>
-            <div class="col-sm">
-                <img src="https://picsum.photos/200" alt="Product 1">
+            <div class="col-sm border border-dark">
+                <img src="pictures/item-pics/Logitech-G502-LIGHTSPEED.jpg" class="w-50" alt="Product 2">
+                <br><br>
                 <p>Logitech G502 LIGHTSPEED</p>
                 <p>$150</p>
             </div>
-            <div class="col-sm">
-                <img src="https://picsum.photos/200" alt="Product 1">
+            <div class="col-sm border border-dark">
+                <img src="pictures/item-pics/Fantech-Aria-XD7.jpg" alt="Product 3">
+                <br><br>
                 <p>Fantech Aria XD7</p>
                 <p>$70</p>
             </div>
-            <div class="col-sm">
-                <img src="https://picsum.photos/200" alt="Product 1">
+            <div class="col-sm border border-dark">
+                <img src="pictures/item-pics/Razer-DeathAdder-V3.jpg" class="w-50" alt="Product 4">
                 <p>Razer DeathAdder V3</p>
                 <p>$170</p>
             </div>
         </div>
     </div>
+    <br><br>
     <!--Footer-->
     <footer w3-include-html="footer.html" class="bg-light">
     </footer>
