Log Out button, Points added to user account

--- a/cart.html
+++ b/cart.html
@@ -56,7 +56,7 @@
       </form>
       <br>
       <p id="total"></p>
-      <button type="button" class="btn btn-success" id="paymentbtn">Place Order</button></a>
+      <button type="button" class="btn btn-success" id="paymentbtn" onclick="AddPoints(event)">Place Order</button></a>
     </div>
     <br>
     
