--- a/item-catalogue.html
+++ b/item-catalogue.html
@@ -15,7 +15,7 @@
 
     <form class = "filter">
         <!-- id="option" -->
-        <input type="radio" class="btn-check" id = "option-all" name="category" data-value="all" oninput="filterCreator(event)" checked>
+        <input type="radio" class="btn-check" id = "option-all" name="category" data-value="all" role="button" oninput="filterCreator(event)" checked>
         <label class="btn btn-info" for="option-all">All</label>
         <input type="radio" class="btn-check" id = "option-laptop" name="category" data-value="laptop" oninput="filterCreator(event)">
         <label class="btn btn-info" for="option-laptop">Laptops</label>
