--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css_folder/normalize.css">
 </head>
 <body> <!--Colour code for background is f8f9fa-->
-    <div class="container-fluid bg-light">
+    <div class="container-fluid bg-light" id = "footer">
         <br>
         <div class="row">
             <div class="col-sm text-center">
