--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,8 @@
 
     <header w3-include-html="header.html" class="bg-light"> 
     </header>
-
+    <dotlottie-player src="https://lottie.host/8d5f8ee5-af1b-422d-a61e-e2d85f1bb652/3wlXVDvTGs.json" 
+    background="transparent" speed="1" style="width: 300px; height: 300px; display: none;" id = "waiting-animation" loop autoplay ></dotlottie-player>
     <br>
     <table class="table">
         <thead>
@@ -68,5 +69,8 @@
     <script src="js_folder/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="js_folder/cart.js"></script>
+    <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
+
+    
 </body>
 </html>
