Added game Spin the wheel

--- a/footer.html
+++ b/footer.html
@@ -14,9 +14,9 @@
             <div class="col-sm text-center">
                 <h2>Contact Us</h2>
                 <div class="text-start w-25" style="margin: auto;">
-                    <p>Contact No: 12345678</p>
+                    <p>Contact No: 8341 0349</p>
                     <p>Email: TechStudio@gmail.com</p>
-                    <p>Office Address: Johor Bahru Blk 23 Street 323</p>
+                    <p>Office Address: Ang Mo Kio Blk 23 Street 323</p>
                 </div>
                 
             </div>
