Show acc information on signup page if user logged on already

--- a/signUp.html
+++ b/signUp.html
@@ -40,6 +40,15 @@
             <button type="submit" class="btn btn-success" onclick="PostInfoToDB(event)">Submit</button>
         </form>
     </div>
+    <div id = "show-cutomer-details" class="container bg-light w-25">
+        <div id = "show-name"></div>
+        <div id = "show-email"></div>
+        <div id = "show-number"></div>
+        <div id = "show-address"></div>
+        <div id = "show-points"></div>
+        <div id = "show-password"></div>
+        <button type="button" class="btn btn-success" onclick="LogOut(event)">Log Out</button> 
+    </div>
     <br>
     <footer w3-include-html="footer.html" class="bg-light">
     </footer>
