--- a/index.html
+++ b/index.html
@@ -42,27 +42,28 @@
         <h2>Best Seller for <br> Laptop
         </h2>
         <div class="row">
-            <div class="col-sm border border-dark">
+            <div class="col-sm border border-dark" >
                 <br>
                 <img src="pictures/item-pics/ALIENWARE-M18-GAMING-LAPTOP.jpg" alt="Product 1">
-                <p>ALIENWARE M18 GAMING LAPTOP</p>
+                <a href="individual-item.html?ItemId=65acc93523c8ba480000122e"><p>ALIENWARE M18 GAMING LAPTOP</p></a>
+                <!-- <p>ALIENWARE M18 GAMING LAPTOP</p> -->
                 <p>$1750</p>
             </div>
             <div class="col-sm border border-dark">
                 <br>
                 <img src="pictures/item-pics/ASUS-Vivobook-Pro-15X-OLED.jpg" alt="Product 2">
-                <p>ASUS Vivobook Pro 15X <br> OLED</p>
+                <a href="individual-item.html?ItemId=65bdf613d4a556290000802c"><p>ASUS Vivobook Pro 15X <br> OLED</p></a>
                 <p>$2,851</p>
             </div>
             <div class="col-sm border border-dark">
                 <br>
                 <img src="pictures/item-pics/MSI-GF63-Thin.jpg" alt="Product 3">
-                <p>MSI GF63 Thin</p>
+                <a href="individual-item.html?ItemId=65bdf7e4d4a5562900008221"><p>MSI GF63 Thin</p></a>
                 <p>$1,566</p>
             </div>
             <div class="col-sm border border-dark">
                 <img src="pictures/item-pics/ACER-Swift-Go-14.jpg" alt="Product 4">
-                <p>ACER Swift Go 14</p>
+                <a href="individual-item.html?ItemId=65bdf875d4a5562900008225"><p>ACER Swift Go 14</p></a>
                 <p>$998</p>
             </div>
         </div>
@@ -78,22 +79,22 @@
                 <br>
                 <img src="pictures/item-pics/Logitech-Pop-Keys.jpg" class="w-100" alt="Product 1">
                 <br><br><br>
-                <p>Logitech Pop Keys</p>
+                <a href="individual-item.html?ItemId=65bdf937d4a556290000822a"><p>Logitech Pop Keys</p></a>
                 <p>$100</p>
             </div>
             <div class="col-sm border border-dark">
                 <img src="pictures/item-pics/Razer-BlackWidow-V4-Pro.jpg" alt="Product 2">
-                <p>Razer BlackWidow V4 Pro</p>
+                <a href="individual-item.html?ItemId=65bdfa0fd4a5562900008230"><p>Razer BlackWidow V4 Pro</p></a>
                 <p>$284</p>
             </div>
             <div class="col-sm border border-dark">
                 <img src="pictures/item-pics/Logitech-Pro-X.jpg" alt="Product 3">
-                <p>Logitech Pro X</p>
+                <a href="individual-item.html?ItemId=65bdfa71d4a5562900008409"><p>Logitech Pro X</p></a>
                 <p>$150</p>
             </div>
             <div class="col-sm border border-dark">
                 <img src="pictures/item-pics/NZXT-Function-TKL.jpg" alt="Product 4">
-                <p>NZXT Function TKL</p>
+                <a href="individual-item.html?ItemId=65bdfb25d4a5562900008427"><p>NZXT Function TKL</p></a>
                 <p>$130</p>
             </div>
         </div>
@@ -106,24 +107,24 @@
         <div class="row">
             <div class="col-sm border border-dark">
                 <img src="pictures/item-pics/Razer-Viper-V2-Pro.jpg" class="w-50" alt="Product 1">
-                <p>Razer Viper V2 Pro</p>
+                <a href="individual-item.html?ItemId=65bdfbbfd4a5562900008435"><p>Razer Viper V2 Pro</p></a>
                 <p>$130</p>
             </div>
             <div class="col-sm border border-dark">
                 <img src="pictures/item-pics/Logitech-G502-LIGHTSPEED.jpg" class="w-50" alt="Product 2">
                 <br><br>
-                <p>Logitech G502 LIGHTSPEED</p>
+                <a href="individual-item.html?ItemId=65bdfc5ed4a5562900008444"><p>Logitech G502 LIGHTSPEED</p></a>
                 <p>$150</p>
             </div>
             <div class="col-sm border border-dark">
                 <img src="pictures/item-pics/Fantech-Aria-XD7.jpg" alt="Product 3">
                 <br><br>
-                <p>Fantech Aria XD7</p>
+                <a href="individual-item.html?ItemId=65bdfd2ed4a556290000844d"><p>Fantech Aria XD7</p></a>
                 <p>$70</p>
             </div>
             <div class="col-sm border border-dark">
                 <img src="pictures/item-pics/Razer-DeathAdder-V3.jpg" class="w-50" alt="Product 4">
-                <p>Razer DeathAdder V3</p>
+                <a href="individual-item.html?ItemId=65bdfd8dd4a5562900008451"><p>Razer DeathAdder V3</p></a>
                 <p>$170</p>
             </div>
         </div>
