Change in Css for header. Media Qeuery for header and item-catalouge

--- a/header.html
+++ b/header.html
@@ -10,19 +10,17 @@
     <link rel="stylesheet" href="css_folder/header.css">
 </head>
 <body> <!--Colour code for background is f8f9fa-->
-    <div id="topheader" class="container-fluid">
-        <br>
-        <div class="d-flex">
-            <a href="index.html"><img src="Images/Logo.png" alt="Logo" id="logo"> </a>
-            <div id="imgbutton" class="d-flex">
-                <a href="login.html"><img src="Images/Account.png" alt="Login" class="sidepng"></a>
-                <a href = "cart.html"><img src="Images/Cart.png" alt="Cart" class="sidepng"></a>
-            </div>
+    <!-- <div id="topheader" class="container-fluid"> -->
+      <div id="topheader" class="icon-container">
+        <a href="index.html"><img src="Images/Logo.png" alt="Logo" id="logo"></a>
+        <div id="imgbutton">
+            <a href="login.html"><img src="Images/Account.png" alt="Login" class="sidepng"></a>
+            <a href="cart.html"><img src="Images/Cart.png" alt="Cart" class="sidepng"></a>
         </div>
-        <br>
     </div>
+    
     <!--NAVBAR-->
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light bg-light" id = "navigation-bar">
         <a class="navbar-item" href="index.html">Home</a>
         <a class="navbar-item" href="item-catalogue.html">Catalogue</a>
         <a class="navbar-item" href="wheel.html">Play to win</a>
