Cart Media Query and Game Page

--- a/cart.html
+++ b/cart.html
@@ -15,6 +15,7 @@
     <dotlottie-player src="https://lottie.host/8d5f8ee5-af1b-422d-a61e-e2d85f1bb652/3wlXVDvTGs.json" 
     background="transparent" speed="1" style="width: 300px; height: 300px; display: none;" id = "waiting-animation" loop autoplay ></dotlottie-player>
     <br>
+    <h1 class = "text-center">Cart Items</h1>
     <table class="table">
         <thead>
           <tr>
