--- a/header.html
+++ b/header.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-light bg-light" id = "navigation-bar">
         <a class="navbar-item" href="index.html">Home</a>
         <a class="navbar-item" href="item-catalogue.html">Catalogue</a>
-        <a class="navbar-item" href="wheel.html">Play to win</a>
+        <a class="navbar-item" href="pay_to_win.html">Play to win</a>
         <a class="navbar-item" href="signUp.html">Account</a>   
         <!-- This is the dropdown menu
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
