--- a/individual-item.html
+++ b/individual-item.html
@@ -35,6 +35,7 @@
 
     </section>
     <hr>
+    <h1 class = "text-center">Details</h1>
     <p id = "item-details" style="display: none;"></p>
 
     <footer w3-include-html="footer.html">
