Added media query to home page, signup/login page and game page(spin the wheel).

--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <header w3-include-html="header.html" class="bg-light"> 
     </header>
     <br>
-    <div class="container bg-light w-25" >
+    <div class="container bg-light w-25" id="form" >
         <form id = "login-form" style="display: none;">
             <div class="form-group">
                 <label for="email">Email:</label>
