--- a/footer.html
+++ b/footer.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="css_folder/normalize.css">
+    <link rel="stylesheet" href="css_folder/footer.css">
 </head>
 <body> <!--Colour code for background is f8f9fa-->
     <div class="container-fluid bg-light" id = "footer">
@@ -20,7 +21,7 @@
                 </div>
                 
             </div>
-            <div class="col-sm text-center">
+            <div class="col-sm text-center" id="follow">
                 <h2>Follow Us On</h2>
                 <a href=""><img src="Images/facebook.png" alt="Facebook"></a>
                 <a href=""><img src="Images/Instagram.png" alt="Instagram"></a>
