Added wheel image to pay_to_win page.

--- a/pay_to_win.html
+++ b/pay_to_win.html
@@ -22,7 +22,7 @@
         <div class = "flex-box row">
             <a href = "wheel.html" class = "pageLink">
                 <div>
-                <img class = "game-pic" src = "Images/Account.png">
+                <img class = "game-pic" src = "Images/wheel.png">
                 <h4>Spin the wheel</h4>
                 </div>
             </a>
